# deluca-igpc

./: PlanarQuadrotorExperiment.ipynb  QuadrotorExperimentFinal.ipynb  QuadrotorILQRTest.ipynb  QuadrotorTestIGPC.ipynb  QuadrotorTestILC.ipynb  README.md  ReacherExperiment.ipynb  Rollout Exploration.ipynb  TimingComparisonsBwDelucaWilhelm.ipynb  igpc.py  ilc.py  ilqr.py  lqr_solver.py  rollout.py  setup.cfg
deluca/igpc/: _openloop.py  igpc.py  ilc.py  ilqr.py  legacy_code.py  lqr_solver.py  plot_utils.py  rollout.py
test/: QuadrotorILQRTest.ipynb  QuadrotorTestIGPC.ipynb  QuadrotorTestILC.ipynb
