[metadata]
name = deluca-igpc
version = 0.0.1
author = Google AI Princeton
author_email = namanagarwal@googl.com
url = https://github.com/MinRegret/deluca-igpc
description = 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	differentiable
	control algorithms
	reinforcement learning
license = Apache License
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Development Status :: 3 - Alpha

[options]
packages = find_namespace:
install_requires = 
    deluca
    numpy
    tqdm
    scipy
    sklearn
    matplotlib
    jupyter
    ipython
    pathos
    pigpio
    click
		tensorboard
    pandas
    jax
    flax
